<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >
    
    <EditText
        android:id="@+id/status_txt"
        android:hint="@string/status_hint_text"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:maxLines="5" />
    
    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/status_txt"
        android:text="@string/cancel_text" />
    
    <Button
        android:id="@+id/post_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/status_txt"
        android:text="@string/update_status_text" />
        		
</RelativeLayout>
