<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f0f0f0" >
    
 <LinearLayout 
	    android:orientation="horizontal"
	    android:id="@+id/topbar"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="7dp"
	    android:background="@drawable/blue_gradient"
    >
    	<ImageButton
    	    android:id="@+id/back_btn"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:src="@drawable/icon_down_left"
    	    android:contentDescription="@string/back_btn_desc"
    	    android:background="@null" />
    	    	
    	<TextView
			android:id="@+id/other_user_name"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_gravity="center_vertical"
			android:textColor="#ffffff"
			android:textSize="14sp"
			android:layout_marginLeft="5dp"
			android:textStyle="bold"
		/>
    </LinearLayout>
    
    <ListView
        android:id="@+id/chat_list_view"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="5dip"
	    android:divider="@null"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" >
        
    </ListView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <EditText
            android:id="@+id/message_edt_box"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/write_chat_text" />
        
        <Button
            android:id="@+id/send_message_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_button_text" />

    </LinearLayout>

</LinearLayout>
